--- a/login_app/server/package.json
+++ b/login_app/server/package.json
@@ -13,14 +13,18 @@
     "@types/express": "^4.17.21",
     "@types/mongodb": "^4.0.7",
     "@types/multer": "^1.4.11",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^9.1.8",
     "mongoose": "^8.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9"
   }
 }
