--- a/login_app/server/package.json
+++ b/login_app/server/package.json
@@ -17,14 +17,19 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.28",
     "mongodb-memory-server": "^9.1.8",
     "mongoose": "^8.3.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.0",
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/morgan": "^1.9.9"
+    "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.14",
+    "@types/otp-generator": "^4.0.2"
   }
 }
